<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_mode_5"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/instructionTextView"
                style="@style/BoldMono2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/top2"
                android:gravity="center"
                android:text="@string/name"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/nlarge" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/high_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    style="@style/BoldMono"
                    android:autoSizeTextType="uniform"
                    android:gravity="center"
                    android:text="@string/high_score"
                    android:textColor="@color/white"
                    android:textSize="@dimen/normal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/top8"
                android:layout_marginRight="@dimen/top8"
                android:layout_marginTop="@dimen/small"
                android:layout_marginBottom="@dimen/small"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/five"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/heasy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="@dimen/small"
                        style="@style/BoldMono"
                        android:text="@string/heasy" />

                    <TextView
                        android:id="@+id/seasy"
                        style="@style/BoldMono"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:paddingLeft="35dp"
                        android:text="@string/seasy"
                        android:textColor="@color/white"
                        android:textSize="@dimen/small" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/five"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/hnormal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="@dimen/small"
                        style="@style/BoldMono"
                        android:text="@string/hnormal" />

                    <TextView
                        android:id="@+id/snormal"
                        style="@style/BoldMono"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:paddingLeft="10dp"
                        android:text="@string/snormal"
                        android:textColor="@color/white"
                        android:textSize="@dimen/small" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/hhard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="@dimen/small"
                        style="@style/BoldMono"
                        android:text="@string/hhard" />

                    <TextView
                        android:id="@+id/shard"
                        style="@style/BoldMono"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:paddingLeft="35dp"
                        android:text="@string/shard"
                        android:textColor="@color/white"
                        android:textSize="@dimen/small" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/top1"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal">

                    <Button
                        android:id="@+id/homeBtn"
                        android:layout_width="219dp"
                        android:layout_height="86dp"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="@dimen/top2"
                        android:background="@drawable/play_roundbtn"
                        android:padding="18dp"
                        android:text="@string/play"
                        android:textColor="@color/white"
                        android:textSize="@dimen/small" />

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>