<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_mode_5"
    tools:context=".PlayActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal">

                <Button
                    android:id="@+id/easyBtn"
                    android:layout_width="215dp"
                    android:layout_height="81dp"
                    style="@style/BoldMono"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/top7"
                    android:background="@drawable/easy_roundbtn"
                    android:padding="14dp"
                    android:text="@string/easy"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal">

                <Button
                    android:id="@+id/normalBtn"
                    android:layout_width="215dp"
                    android:layout_height="81dp"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/top7"
                    style="@style/BoldMono"
                    android:background="@drawable/normal_roundbtn"
                    android:padding="18dp"
                    android:text="@string/normal"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/top"
                android:layout_gravity="center_vertical|center_horizontal">

                <Button
                    android:id="@+id/hardBtn"
                    android:layout_width="215dp"
                    android:layout_height="81dp"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/top7"
                    android:background="@drawable/hard_roundbtn"
                    android:padding="14dp"
                    android:text="@string/hard"
                    style="@style/BoldMono"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>