<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameOverActivity"
    android:background="@drawable/bg_4">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/nlarge"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="300dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/nlarge"
                android:src="@drawable/game_over3" />

            <TextView
                android:id="@+id/high_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top2"
                android:gravity="center"
                android:text="@string/your_score"
                style="@style/BoldMono"
                android:textColor="@color/white"
                android:textSize="@dimen/lnormal" />

            <TextView
                android:id="@+id/scoretv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top2"
                android:layout_marginBottom="@dimen/normal"
                style="@style/BoldMono"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/normal" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal">

                <Button
                    android:id="@+id/tryBtn"
                    style="@style/BoldMono"
                    android:layout_width="215dp"
                    android:layout_height="81dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/try_roundbtn"
                    android:padding="14dp"
                    android:text="@string/try_again"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal">

                <Button
                    android:id="@+id/homeBtn"
                    style="@style/BoldMono"
                    android:layout_width="215dp"
                    android:layout_height="81dp"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/top1"
                    android:background="@drawable/home_roundbtn"
                    android:padding="18dp"
                    android:text="@string/home"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small" />

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>